--- a/pom.xml
+++ b/pom.xml
@@ -74,10 +74,27 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
 
+<!--Free maker-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
+
 
     </dependencies>
+<!--讓外部終端可以使用此jar-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
-<!--    <build>-->
+
+    <!--    <build>-->
 <!--        <plugins>-->
 <!--            <plugin>-->
 <!--                <groupId>org.springframework.boot</groupId>-->
