--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.type-aliases-package=com.azhe.pojo
+
+# ?? HikariCP ?????
+spring.datasource.hikari.auto-commit=true
+logging.level.com.zaxxer.hikari=INFO
+
+
+#session????
+#server.servlet.session.timeout=1s
+
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.suffix=.ftl
