添加日誌顯示類與行數，測試session中

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,20 @@
             <scope>provided</scope>
         </dependency>
 
+<!--使用@Test，注意最用區域!!-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.10</version> <!-- 使用最新版本 -->
+        </dependency>
+
 
 
 
