--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ logging.level.com.zaxxer.hikari=INFO
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
 
+
+server.servlet.session.cookie.name=JJSESSIONID
