--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,24 +3,45 @@ server.port=666
 
 spring.application.name=javaWeb-241011
 
+# myDB
+#spring.datasource.url=jdbc:mysql://localhost:3306/db2409?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db2409?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=1234
+# Test4
+spring.datasource.url=jdbc:mysql://8.210.148.116:3306/8bet?useSSL=false
+spring.datasource.username=game
+spring.datasource.password=VJ4X2Buh3N8YEFdHX2v@456
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.type-aliases-package=com.azhe.pojo
 
-# ?? HikariCP ?????
+#auto-commit
 spring.datasource.hikari.auto-commit=true
+
 logging.level.com.zaxxer.hikari=INFO
 
 
 #session????
 #server.servlet.session.timeout=1s
 
-spring.freemarker.template-loader-path=classpath:/templates/
-spring.freemarker.suffix=.ftl
+#spring.freemarker.template-loader-path=classpath:/templates/
+#spring.freemarker.suffix=.ftl
+#
+#spring.freemarker.cache=false
+spring.thymeleaf.cache=false
+
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
+
 
 #???session???
 #server.servlet.session.cookie.name=JJSESSIONID
+
+spring.devtools.livereload.enabled=true
+
