--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,14 @@ mybatis.type-aliases-package=com.azhe.pojo
 #auto-commit
 spring.datasource.hikari.auto-commit=true
 
+
+
 logging.level.com.zaxxer.hikari=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework=DEBUG
+
+
+server.error.whitelabel.enabled=false
 
 
 #session????
@@ -39,6 +46,7 @@ spring.thymeleaf.suffix=.html
 
 
 
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 #???session???
 #server.servlet.session.cookie.name=JJSESSIONID
