--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,34 +22,24 @@ mybatis.type-aliases-package=com.azhe.pojo
 spring.datasource.hikari.auto-commit=true
 
 
-
 logging.level.com.zaxxer.hikari=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework=DEBUG
 
 
-server.error.whitelabel.enabled=false
-
-
-#session????
-#server.servlet.session.timeout=1s
-
-#spring.freemarker.template-loader-path=classpath:/templates/
-#spring.freemarker.suffix=.ftl
-#
-#spring.freemarker.cache=false
+#Adaptation mode
 spring.thymeleaf.cache=false
-
 spring.thymeleaf.enabled=true
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
 
-mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.mapper-locations=classpath:mapper/*.xml
 
 #???session???
 #server.servlet.session.cookie.name=JJSESSIONID
 
-spring.devtools.livereload.enabled=true
+#spring.devtools.livereload.enabled=true
 
