--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.datasource.password=VJ4X2Buh3N8YEFdHX2v@456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.type-aliases-package=com.azhe.pojo
+#camel-name trans
+mybatis.configuration.map-underscore-to-camel-case=true
+
 
 #auto-commit
 spring.datasource.hikari.auto-commit=true
