--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,16 @@
             <scope>provided</scope>
         </dependency>
 
+<!--        腳本導出需要使用-->
+        <dependency>
+            <groupId>ognl</groupId>
+            <artifactId>ognl</artifactId>
+            <version>3.1.26</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 </project>
