路徑設定完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#http://localhost:666/payTool
 server.port=666
 
 
@@ -38,6 +39,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
+azhe.sql.payGenerateLocation=C:\\Develop\\generateZF-sql\\
 
 #mybatis.mapper-locations=classpath:mapper/*.xml
 
