--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
         </dependency>
 
 
+<!--        jwt令牌依賴-->
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
 
 
     </dependencies>
