--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,12 @@ azhe.sql.payGenerateLocation=C:\\Develop\\generateZF-sql\\
 
 #spring.devtools.livereload.enabled=true
 
+
+
+app.version=@project.parent.version@
+app.build.time=@timestamp@
+
+spring.cloud.config.profile=prod
+spring.cloud.config.uri=http://configsrv:8099
+spring.cloud.config.name=common,redisson,rocketmq,platform,member,mongodb,datasource
+
